# AIMFiltech

./: .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.openfoam  Dockerfile.sagemaker  Makefile  README.md  data.dvc  data_extractor.py  deploy.sh  openfoam_dataVariantfile.xlsx  pyproject.toml  requirements.txt  setup.py  temp_deploy.txt
.cfg/: logger.yaml
.cfg/components/: data_management.yaml  openfoam_handler.yaml
.cfg/lambda/: pre_processing.yaml
.dvc/: config
.github/workflows/: test_and_lint.yaml  workflow.yaml
.terraform/: main.tf
cavity/: PyFoamHistory  PyFoamRunner.pisoFoam.logfile  PyFoamRunner.pisoFoam.logfile.restart00  PyFoamRunner.pisoFoam.logfile.restart01  PyFoamRunner.pisoFoam.logfile.restart02  PyFoamServer.info  PyFoamState.LastOutputSeen  PyFoamState.LogDir  PyFoamState.StartedAt
cavity/0.25/: LambVectorField  Lambda2Field  QField  U  UNear  URandom  Ux  Uy  Uz  UzeroGrad  blendingFactorField  diffP  diffU  divPhi  divU  enstrophyField  epsilonzeroGrad  flowTypeField  fluxField  gradPhi  gradU  magP  magSqrP  magSqrU  magU  p  pNear  (+6 more)
model/: logistic_regression_model.joblib
openfoam_case/: .~lock.Resultfile.xlsx#  PyFoamPrepareCaseParameters  PyFoamPrepareCaseParameters.rst
simulation_data/: .~lock.Masterfile.xlsx#  Masterfile.xlsx
src/: logger.py  utility.py
terraform/: main.tf  outputs.tf  variables.tf
test_simulation_data/: Masterfile.xlsx  Resultfile.xlsx  Variantfile.xlsx
variant_generator/: Masterfile.xlsx  OFML.py  PyFoam.blockMesh.logfile  PyFoamHistory  PyFoamState.LastOutputSeen  test  variant_generator.py
(+5813 files in other folders)
