[project]
name = "aimfiltech"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.39.0",
    "flask>=3.1.1",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pyfoam>=2023.7",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "sagemaker>=2.247.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "shap>=0.48.0",
    "tenacity>=9.1.2",
    "umap-learn>=0.5.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
addopts = "-v --tb=short"
